Refactor: Handle warnings in ViewFacilityPage